--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" 
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
@@ -15,8 +16,8 @@
         android:textColor="#FFFF00"
         android:background="@android:color/darker_gray"
         android:padding="16dp"
-        android:layout_marginBottom="24dp" />
-
+        android:layout_marginBottom="16dp"/>
+        
     <Button
         android:id="@+id/button_things"
         android:layout_width="wrap_content"
@@ -24,6 +25,15 @@
         android:text="Things"
         android:textColor="#FFFF00"
         android:background="@android:color/darker_gray"
-        android:padding="16dp" />
-
+        android:padding="16dp"
+        android:layout_marginBottom="16dp"/>
+        
+    <Button
+        android:id="@+id/button_report"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Report"
+        android:textColor="#FFFF00"
+        android:background="@android:color/darker_gray"
+        android:padding="16dp"/>
 </LinearLayout>
