--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,5 +35,15 @@
         android:text="Report"
         android:textColor="#FFFF00"
         android:background="@android:color/darker_gray"
+        android:padding="16dp"
+        android:layout_marginBottom="16dp"/>
+        
+    <Button
+        android:id="@+id/button_fields"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fields"
+        android:textColor="#FFFF00"
+        android:background="@android:color/darker_gray"
         android:padding="16dp"/>
 </LinearLayout>
