--- a/app/src/main/res/layout/dialog_fields.xml
+++ b/app/src/main/res/layout/dialog_fields.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dialog_fields_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="#000000"
-    android:padding="16dp">
-    
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:id="@+id/dialog_fields_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
-    </ScrollView>
-    
-    <Button
-        android:id="@+id/btn_save_fields"
+    android:padding="24dp"
+    android:background="@color/colorSurface">
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/dialogFieldsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:textColor="#FFFF00"
-        android:background="@android:color/darker_gray"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
+        android:text="@string/dialog_fields_title"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dialogField1InputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/field_example_hint">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dialogField1EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/dialogFieldsButtonSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_marginTop="16dp"
+        />
+
 </LinearLayout>
