--- a/app/src/main/res/layout/activity_fields_report.xml
+++ b/app/src/main/res/layout/activity_fields_report.xml
@@ -1,20 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView 
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" 
+    xmlns:app="http://schemas.android.com/apk/res-auto" 
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_fields_report_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
-    
-    <LinearLayout
-        android:layout_width="match_parent"
+    tools:context=".FieldsReportActivity"
+    android:background="?attr/colorBackground">
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/fieldsReportTitleText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
-        
-        <TableLayout
-            android:id="@+id/report_table"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:stretchColumns="*"/>
-    </LinearLayout>
-</ScrollView>
+        android:text="@string/fields_report_title"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"/>
+    
+    <!-- A list of fields in a recycler or list -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fieldsReportRecycler"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/fieldsReportTitleText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnCloseFieldsReport"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/close"
+        style="@style/Widget.MaterialComponents.Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
