--- a/app/src/main/res/layout/activity_things.xml
+++ b/app/src/main/res/layout/activity_things.xml
@@ -1,52 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
+<androidx.constraintlayout.widget.ConstraintLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" 
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_things_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="24dp"
-    android:background="#000000">
+    tools:context=".ThingsActivity"
+    android:background="?attr/colorBackground">
 
-    <EditText
-        android:id="@+id/edittext_thing"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter a thing"
-        android:textColor="#FFFF00"
-        android:textColorHint="#888888"
-        android:background="@android:color/darker_gray"
-        android:padding="16dp"
-        android:layout_marginBottom="16dp" />
-
-    <Button
-        android:id="@+id/button_save_thing"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/thingsTitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:textColor="#FFFF00"
-        android:background="@android:color/darker_gray"
-        android:padding="16dp"
-        android:layout_gravity="center_horizontal" />
+        android:text="@string/things_title"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"/>
 
-    <TextView
-        android:id="@+id/text_saved_things_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Saved Things:"
-        android:textColor="#FFFF00"
-        android:textSize="18sp"
-        android:layout_marginTop="24dp" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-        <LinearLayout
-            android:id="@+id/container_saved_things"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-
-</LinearLayout>
-
+    <!-- Example to show a list or items about "things" -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/thingsRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/thingsTitleText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
