--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,29 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme -->
-    <style name="Theme.MyApp7" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand colors -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
-        <item name="colorOnPrimary">@color/colorOnPrimary</item>
-        
-        <!-- Secondary brand colors -->
-        <item name="colorSecondary">@color/colorSecondary</item>
-        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
-        <item name="colorOnSecondary">@color/colorOnSecondary</item>
-        
-        <!-- Background and surface -->
-        <item name="android:colorBackground">@color/colorBackground</item>
-        <item name="colorOnBackground">@color/colorOnBackground</item>
-        <item name="android:colorForeground">@color/colorOnBackground</item>
-        <item name="colorSurface">@color/colorSurface</item>
-        <item name="colorOnSurface">@color/colorOnSurface</item>
-        
-        <!-- Use MaterialComponents for buttons, text fields, etc. -->
-        <item name="materialButtonStyle">@style/Widget.MaterialComponents.Button</item>
-        <item name="materialCardViewStyle">@style/Widget.MaterialComponents.CardView</item>
-        
-        <!-- Customize shape/elevation if desired -->
-        <item name="android:buttonStyle">@style/Widget.MaterialComponents.Button</item>
+<resources>
+    <!-- A light AppCompat theme without the ActionBar -->
+    <style name="Theme.MyApp7" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <!-- Example color overrides -->
+        <item name="android:colorBackground">@android:color/white</item>
+        <item name="android:textColorPrimary">#000000</item>
+
+        <!-- Optional brand color for status bar, etc. -->
+        <item name="colorPrimary">#3F51B5</item>
+        <item name="colorPrimaryDark">#303F9F</item>
+        <item name="colorAccent">#FF4081</item>
     </style>
 </resources>
